versioned_versioned_docs/version-2.0.0/modules/rnr/configuration/playback.mdx
---
sidebar_position: 2
sidebar_label: Playback
---

# RnR Playback namespace configuration


## Common configuration

| Name                            | Example             | Description                              |
| ------------------------------- | -----------------   | -----------------------------------------|
| NATS_URL                        |                     | NATS url                                 |
| NATS_STORAGE_TYPE               | "0"                 | NATS storage type: 0 - files, 1 - memory |
| NATS_EVENT_STREAM               | DebeziumStream      | Stream name for playback event  |
| NATS_EVENT_SUBJECT              | aoh.live.postgres.* | Stream subject for playback event|
| TRANSFORM_MESSAGE_DB_HOST       | localhost           | Transform message DB information |
| TRANSFORM_MESSAGE_DB_PORT       | 5432                | Transform message DB information |
| TRANSFORM_MESSAGE_DB_DATABASE   | postgres            | Transform message DB information |
| TRANSFORM_MESSAGE_DB_SCHEMA     | public              | Transform message DB information |
| TRANSFORM_MESSAGE_DB_USER       | postgres            | Transform message DB information |
| TRANSFORM_MESSAGE_DB_PASSWORD   |                     | Transform message DB information |
| LIVE_DB_HOST                    | localhost           | Live DB information |
| LIVE_DB_PORT                    | 5432                | Live DB information |
| LIVE_DB_DATABASE                | postgres            | Live DB information |
| LIVE_DB_USER                    | postgres            | Live DB information |
| LIVE_DB_PASSWORD                |                     | Live DB information |
| LIVE_DB_SSL_MODE                | disable             | Live DB information |
| PLAYBACK_DB_HOST                | localhost           | Live DB information |
| PLAYBACK_DB_PORT                | 5432                | Live DB information |
| PLAYBACK_DB_DATABASE            | postgres            | Live DB information |
| PLAYBACK_DB_USER                | postgres            | Live DB information |
| PLAYBACK_DB_PASSWORD            |                     | Live DB information |
| MINIO_URL                       |                     | Storage host |
| MINIO_BUCKET                    | backup              | Storage bucket name |
| RTUS_DOMAIN                     |                     | RTUS service domain |
| SCHEDULE_JOB_DOMAIN             |                     | schedulejob service domain |
| DEFAULT_REPLAY_DURATION         | 2h                  | default replay duration |
| DB_SNAPSHOT_RETENTION_IN_DAY    | "7"                 | retention dump object |
| VALID_MIN_REPLAY_SPEED          | "0.5"               | min speed in playback session |
| VALID_MAX_REPLAY_SPEED          | "5"                 | max speed in playback session |
| REPLAY_INTERVAL_IN_SECOND       |  "10s"              | replay interval update |
| SYSTEM_SCHEMA_NAME              |  "aoh_sys"          | system schema include system time table|
| SQL_STMT_BATCH_SIZE             |  "1000"             | batch size to execute SQL statement during init and play session|

### ReplayMgr configuration
| Name                            | Example             | Description                                                                      |
| ------------------------------- | -----------------   | ---------------------------------------------------------------------------------|
| MIGRATION_URL                   | file://migrations | directory to migration files |
| REPLAY_MGR_RTUS_TOPIC           | rnr | rtus topic to update SSE |
| REPLAY_MGR_NATS_CONSUMER        | ReplayMgrConsumer | consumer name |
| REPLAY_MGR_APP_PORT             | "5050" | app port |
| REPLAY_MGR_LOG_LEVEL            | "trace" |app log level |
| REPLAY_MGR_VERSION              | "1.4.0" |app version |

### MsgOp configuration
| Name                | Example             | Description                                                                      |
| ------------------- | -----------------   | ---------------------------------------------------------------------------------|
| MSGOP_APP_PORT      | "5060" | app port|
| MSGOP_LOG_LEVEL     | "trace" | app log level|
| MSGOP_VERSION       | "1.4.0" | app version |
| MSGOP_NATS_CONSUMER | MsgOpConsumer | consumer name |

### DBOP configuration
| Name               | Example             | Description                                                                      |
| ------------------ | -----------------   | ---------------------------------------------------------------------------------|
| DBOP_APP_PORT      | "5080" |   app port |
| DBOP_LOG_LEVEL     | "trace" | app log level |
| DBOP_VERSION       | "1.4.0" |   app version |
| DBOP_NATS_CONSUMER | DbOpConsumer | consumer name |
